# CiL-ePHASORSIM

./: .gitignore  C-HiL.pyproj  C-HiL.slnx  README.md  requirements.txt
CiL/: Bus.py  Controller.py  Enum.py  Generator.py  IModbusElement.py  Load.py  README.md  Switch.py  Transformer2W.py  Value.py  __init__.py  pyproject.toml
CiL/configuration/: PP2CHIL.py
CiL/configuration/GUI/: CiLGenerator.py  ListEditCtrl.py  PPNetConverter.py
CiL/configuration/NetConverter/: Base.py  Bus.py  Line.py  Load.py  PPtoePHASORSIM.py  README.md  Shunt.py  Switch.py  Template.xlsx  Transformer2W.py  VoltageSource.py  __init__.py  pyproject.toml
CiL/dashboard/: Alert.py  AlertEvent.py  Dashboard.py  MapOverlay.py  __init__.py
CiL/map/: __init__.py  geo.py  io.py  tile_source.py  util.py  widget.py
examples/: TestSim.py  rtlab_io_import.py
examples/MV_Oberrhein_2026/: CiL-Konfiguration.xlsx  InputRegister.csv  MV_Oberrhein_2026.p  MV_Oberrhein_2026.xlsx
